Hardcoded secrets, missing auth parallel code warning/error detection

--- a/semgrep-rules/hardcoded_secrets.yaml
+++ b/semgrep-rules/hardcoded_secrets.yaml
@@ -1,10 +1,6 @@
 rules:
   - id: hardcoded-secret
-    patterns:
-      - pattern: $VAR = "$SECRET"
-      - metavariable-pattern:
-          metavariable: $SECRET
-          pattern: /(?i)(api[_-]?key|token|secret|passwd|password|credentials)/
+    pattern-regex: (?i)^\s*\w+\s*=\s*["'].*(api[_-]?key|token|secret|passwd|password|credentials).*
     message: "Possible hardcoded secret detected"
     severity: ERROR
     languages: [python]
